[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Globals/Controller.gd" type="Script" id=1]
[ext_resource path="res://Instances/Globals/Overlay.tscn" type="PackedScene" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 tint : hint_color;

void fragment() {
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV);
	COLOR.rgb *= tint.rgb;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/tint = Color( 0.862745, 1, 0.431373, 1 )

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("MainCamera:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/path = NodePath("Ambient:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -60.0, 0.0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Ambient:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -60.0 ]
}

[node name="Controller" type="Node"]
script = ExtResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Overlay" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CanvasLayerTint" type="CanvasLayer" parent="."]
layer = 4

[node name="Tint" type="ColorRect" parent="CanvasLayerTint"]
visible = false
material = SubResource( 2 )
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CameraScroll = SubResource( 3 )

[node name="AnimationPlayerFade" type="AnimationPlayer" parent="."]
anims/Fadein = SubResource( 4 )
anims/Fadeout = SubResource( 5 )

[node name="AnimationPlayerMusic" type="AnimationPlayer" parent="."]
anims/Fadeout = SubResource( 6 )

[node name="AnimationPlayerAmbient" type="AnimationPlayer" parent="."]
anims/Fadein = SubResource( 7 )
anims/Fadeout = SubResource( 8 )

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="Ambient" type="AudioStreamPlayer" parent="."]
bus = "Ambient"

[editable path="Overlay"]
